fix on create file align

--- a/web-editor/src/app/viewer/viewer.component.scss
+++ b/web-editor/src/app/viewer/viewer.component.scss
@@ -27,7 +27,7 @@ a:active {
 }
 
 .my-mat-icon {
-  margin-left: 12em;
+  margin-left: auto;
 }
 .custom-stroked-button {
   margin-left: 1.25em;
